# avtogen

./: .dockerignore  .env.example  .gitignore  README.md  TIMEWEB.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 20260325_0001_initial.py  20260325_0002_image_moderation.py  20260326_0003_runtime_config.py
backend/app/: config.py  logging.py  main.py  seeds.py
backend/app/api/: router.py  routes.py
backend/app/application/: pipeline_service.py
backend/app/db/: models.py  session.py
backend/app/domain/: enums.py
backend/app/prompts/: brief.py  draft.py
backend/app/schemas/: article.py  (+9 more)
frontend/: package-lock.json  package.json
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
infra/: backend-entrypoint.sh  backend.Dockerfile  backend.prod.Dockerfile  frontend.Dockerfile  frontend.prod.Dockerfile  timeweb.backend.env.example  timeweb.frontend.env.example
scripts/: run_backend.ps1  run_demo.ps1  run_frontend.ps1  run_tests.ps1
tests/: test_api_runtime.py  test_article_workspace.py  test_bulk_pipeline_api.py  test_config.py  test_demo_bootstrap.py  test_images.py  test_interlinking.py  test_keywords_api.py  test_openai_gateway.py  test_pipeline.py  test_pipeline_service.py  test_publishing_service.py  test_quality_gate.py  test_research_notes.py  test_research_pack.py  test_section_regeneration.py  test_source_providers.py  test_storage.py  test_topic_cannibalization_api.py  test_topic_workspace.py  test_transcript_cleaner.py  test_wordpress_adapter.py  test_youtube_live_boundary.py
(+36 files in other folders)
